--- a/package.json
+++ b/package.json
@@ -27,16 +27,6 @@
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
-    "lint-staged": "^1.0.1",
-    "precommit-hook": "^3.0.0"
+    "lint-staged": "^1.0.1"
   }
-//  "scripts": {
-//    "lint": "jshint .",
-//    "validate": "npm ls"
-//  },
-//  "pre-commit": [
-//    "lint",
-//    "validate",
-//    "test"
-//  ]
 }
